version/0.5/_sources/_autosummary/ansys.api.pyensight.ens_part_tensor_glyph.ENS_PART_TENSOR_GLYPH.rst.txt
ENS\_PART\_TENSOR\_GLYPH
========================

.. currentmodule:: ansys.api.pyensight.ens_part_tensor_glyph

.. autoclass:: ENS_PART_TENSOR_GLYPH

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
      
      ENS_PART_TENSOR_GLYPH.attrgroupinfo
      
      
      ENS_PART_TENSOR_GLYPH.attrinfo
      
      
      ENS_PART_TENSOR_GLYPH.attrissensitive
      
      
      ENS_PART_TENSOR_GLYPH.attrtree
      
      
      ENS_PART_TENSOR_GLYPH.cmdlang_rec_info
      
      
      ENS_PART_TENSOR_GLYPH.createpart
      
      
      ENS_PART_TENSOR_GLYPH.destroy
      
      
      ENS_PART_TENSOR_GLYPH.get_values
      
      
      ENS_PART_TENSOR_GLYPH.getattr
      
      
      ENS_PART_TENSOR_GLYPH.getattrs
      
      
      ENS_PART_TENSOR_GLYPH.getmetatag
      
      
      ENS_PART_TENSOR_GLYPH.hasmetatag
      
      
      ENS_PART_TENSOR_GLYPH.populate_attr_list
      
      
      ENS_PART_TENSOR_GLYPH.realtimemode
      
      
      ENS_PART_TENSOR_GLYPH.setattr
      
      
      ENS_PART_TENSOR_GLYPH.setattr_begin
      
      
      ENS_PART_TENSOR_GLYPH.setattr_end
      
      
      ENS_PART_TENSOR_GLYPH.setattr_status
      
      
      ENS_PART_TENSOR_GLYPH.setattrs
      
      
      ENS_PART_TENSOR_GLYPH.setmetatag
      
      
      ENS_PART_TENSOR_GLYPH.tracepaths
      
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      ENS_PART_TENSOR_GLYPH.ACTIVE
      ENS_PART_TENSOR_GLYPH.ADJCOORDSCALEFACTOR
      ENS_PART_TENSOR_GLYPH.ADJCOORDTRANSVEC
      ENS_PART_TENSOR_GLYPH.ADJCOORDVARSCALEFACTOR
      ENS_PART_TENSOR_GLYPH.ADJCOORDXVARIABLE
      ENS_PART_TENSOR_GLYPH.ADJCOORDYVARIABLE
      ENS_PART_TENSOR_GLYPH.ADJCOORDZVARIABLE
      ENS_PART_TENSOR_GLYPH.ALPHABY
      ENS_PART_TENSOR_GLYPH.ALPHABYPALETTE
      ENS_PART_TENSOR_GLYPH.BOUNDINGREP
      ENS_PART_TENSOR_GLYPH.CASENUMBER
      ENS_PART_TENSOR_GLYPH.CLIP
      ENS_PART_TENSOR_GLYPH.COLORBY
      ENS_PART_TENSOR_GLYPH.COLORBYPALETTE
      ENS_PART_TENSOR_GLYPH.COLORBYRGB
      ENS_PART_TENSOR_GLYPH.COMPRESSIONLINEWIDTH
      ENS_PART_TENSOR_GLYPH.COMPRESSIONRGB
      ENS_PART_TENSOR_GLYPH.CULLELEMENTS
      ENS_PART_TENSOR_GLYPH.DESCRIPTION
      ENS_PART_TENSOR_GLYPH.DISPLACEBY
      ENS_PART_TENSOR_GLYPH.DISPLACEFACTOR
      ENS_PART_TENSOR_GLYPH.DISPLAYCOMPRESSION
      ENS_PART_TENSOR_GLYPH.DISPLAYMAJOR
      ENS_PART_TENSOR_GLYPH.DISPLAYMIDDLE
      ENS_PART_TENSOR_GLYPH.DISPLAYMINOR
      ENS_PART_TENSOR_GLYPH.DISPLAYTENSION
      ENS_PART_TENSOR_GLYPH.DOUBLESIDED
      ENS_PART_TENSOR_GLYPH.DTA_BLOCK
      ENS_PART_TENSOR_GLYPH.EDIT_TARGET
      ENS_PART_TENSOR_GLYPH.ELTBLANKING
      ENS_PART_TENSOR_GLYPH.ELTDEFINEDBY
      ENS_PART_TENSOR_GLYPH.ELTFEATUREANGLE
      ENS_PART_TENSOR_GLYPH.ELTFILTER1ACTIVE
      ENS_PART_TENSOR_GLYPH.ELTFILTER1TESTOP
      ENS_PART_TENSOR_GLYPH.ELTFILTER1TESTVALUE
      ENS_PART_TENSOR_GLYPH.ELTFILTER1TESTVARCOMP
      ENS_PART_TENSOR_GLYPH.ELTFILTER1TESTVARIABLE
      ENS_PART_TENSOR_GLYPH.ELTFILTER1VARCOMP
      ENS_PART_TENSOR_GLYPH.ELTFILTER1VARIABLE
      ENS_PART_TENSOR_GLYPH.ELTFILTER2ACTIVE
      ENS_PART_TENSOR_GLYPH.ELTFILTER2LOGICALOP
      ENS_PART_TENSOR_GLYPH.ELTFILTER2TESTOP
      ENS_PART_TENSOR_GLYPH.ELTFILTER2TESTVALUE
      ENS_PART_TENSOR_GLYPH.ELTFILTER2TESTVARCOMP
      ENS_PART_TENSOR_GLYPH.ELTFILTER2TESTVARIABLE
      ENS_PART_TENSOR_GLYPH.ELTFILTER2VARCOMP
      ENS_PART_TENSOR_GLYPH.ELTFILTER2VARIABLE
      ENS_PART_TENSOR_GLYPH.ELTFILTER3ACTIVE
      ENS_PART_TENSOR_GLYPH.ELTFILTER3LOGICALOP
      ENS_PART_TENSOR_GLYPH.ELTFILTER3TESTOP
      ENS_PART_TENSOR_GLYPH.ELTFILTER3TESTVALUE
      ENS_PART_TENSOR_GLYPH.ELTFILTER3TESTVARCOMP
      ENS_PART_TENSOR_GLYPH.ELTFILTER3TESTVARIABLE
      ENS_PART_TENSOR_GLYPH.ELTFILTER3VARCOMP
      ENS_PART_TENSOR_GLYPH.ELTFILTER3VARIABLE
      ENS_PART_TENSOR_GLYPH.ELTFILTER4ACTIVE
      ENS_PART_TENSOR_GLYPH.ELTFILTER4LOGICALOP
      ENS_PART_TENSOR_GLYPH.ELTFILTER4TESTOP
      ENS_PART_TENSOR_GLYPH.ELTFILTER4TESTVALUE
      ENS_PART_TENSOR_GLYPH.ELTFILTER4TESTVARCOMP
      ENS_PART_TENSOR_GLYPH.ELTFILTER4TESTVARIABLE
      ENS_PART_TENSOR_GLYPH.ELTFILTER4VARCOMP
      ENS_PART_TENSOR_GLYPH.ELTFILTER4VARIABLE
      ENS_PART_TENSOR_GLYPH.ELTFILTER5ACTIVE
      ENS_PART_TENSOR_GLYPH.ELTFILTER5LOGICALOP
      ENS_PART_TENSOR_GLYPH.ELTFILTER5TESTOP
      ENS_PART_TENSOR_GLYPH.ELTFILTER5TESTVALUE
      ENS_PART_TENSOR_GLYPH.ELTFILTER5TESTVARCOMP
      ENS_PART_TENSOR_GLYPH.ELTFILTER5TESTVARIABLE
      ENS_PART_TENSOR_GLYPH.ELTFILTER5VARCOMP
      ENS_PART_TENSOR_GLYPH.ELTFILTER5VARIABLE
      ENS_PART_TENSOR_GLYPH.ELTFILTER6ACTIVE
      ENS_PART_TENSOR_GLYPH.ELTFILTER6LOGICALOP
      ENS_PART_TENSOR_GLYPH.ELTFILTER6TESTOP
      ENS_PART_TENSOR_GLYPH.ELTFILTER6TESTVALUE
      ENS_PART_TENSOR_GLYPH.ELTFILTER6TESTVARCOMP
      ENS_PART_TENSOR_GLYPH.ELTFILTER6TESTVARIABLE
      ENS_PART_TENSOR_GLYPH.ELTFILTER6VARCOMP
      ENS_PART_TENSOR_GLYPH.ELTFILTER6VARIABLE
      ENS_PART_TENSOR_GLYPH.ELTREPPOINTSNORMALS
      ENS_PART_TENSOR_GLYPH.ELTREPRESENTATION
      ENS_PART_TENSOR_GLYPH.ELTSHRINKFACTOR
      ENS_PART_TENSOR_GLYPH.ENS_DETAILS
      ENS_PART_TENSOR_GLYPH.ENS_KIND
      ENS_PART_TENSOR_GLYPH.ENS_MATERIAL
      ENS_PART_TENSOR_GLYPH.ENS_PARENT_PART
      ENS_PART_TENSOR_GLYPH.ENS_PLIST_KEY_SEL_0
      ENS_PART_TENSOR_GLYPH.ENS_PLIST_KEY_SEL_1
      ENS_PART_TENSOR_GLYPH.ENS_PLIST_KEY_SEL_2
      ENS_PART_TENSOR_GLYPH.ENS_PLIST_KEY_SEL_3
      ENS_PART_TENSOR_GLYPH.ENS_PLIST_KEY_SEL_4
      ENS_PART_TENSOR_GLYPH.ENS_PLIST_KEY_SEL_5
      ENS_PART_TENSOR_GLYPH.ENS_PLIST_KEY_SEL_6
      ENS_PART_TENSOR_GLYPH.ENS_PLIST_KEY_SEL_7
      ENS_PART_TENSOR_GLYPH.ENS_PLIST_KEY_SEL_8
      ENS_PART_TENSOR_GLYPH.ENS_PLIST_KEY_SEL_9
      ENS_PART_TENSOR_GLYPH.ENS_SYMMETRY_AXIS
      ENS_PART_TENSOR_GLYPH.ENS_SYMMETRY_COUNT
      ENS_PART_TENSOR_GLYPH.ENS_TURBO_STAGE
      ENS_PART_TENSOR_GLYPH.ENS_TURBO_VDIM
      ENS_PART_TENSOR_GLYPH.ENS_TURBO_VIEW
      ENS_PART_TENSOR_GLYPH.ENS_UNITS_LABEL
      ENS_PART_TENSOR_GLYPH.ENTITYLABELELT
      ENS_PART_TENSOR_GLYPH.ENTITYLABELNODE
      ENS_PART_TENSOR_GLYPH.FILLPATTERN
      ENS_PART_TENSOR_GLYPH.HANDLES_ENABLED
      ENS_PART_TENSOR_GLYPH.HAS0DELEMENTS
      ENS_PART_TENSOR_GLYPH.HAS1DELEMENTS
      ENS_PART_TENSOR_GLYPH.HAS2DELEMENTS
      ENS_PART_TENSOR_GLYPH.HAS3DELEMENTS
      ENS_PART_TENSOR_GLYPH.HIDDENLINE
      ENS_PART_TENSOR_GLYPH.HIDDENSURFACE
      ENS_PART_TENSOR_GLYPH.IJKAXIS
      ENS_PART_TENSOR_GLYPH.IJKAXISSCALE
      ENS_PART_TENSOR_GLYPH.ISGROUP
      ENS_PART_TENSOR_GLYPH.LIGHTAMBIENT
      ENS_PART_TENSOR_GLYPH.LIGHTDIFFUSE
      ENS_PART_TENSOR_GLYPH.LIGHTEMISSIVE
      ENS_PART_TENSOR_GLYPH.LIGHTREFRACTION
      ENS_PART_TENSOR_GLYPH.LIGHTSPECULARINTENSITY
      ENS_PART_TENSOR_GLYPH.LIGHTSPECULARREFLECTION
      ENS_PART_TENSOR_GLYPH.LIGHTSPECULARSHINE
      ENS_PART_TENSOR_GLYPH.LIGHTSPECULARTINT
      ENS_PART_TENSOR_GLYPH.LINESTYLE
      ENS_PART_TENSOR_GLYPH.LINEWIDTH
      ENS_PART_TENSOR_GLYPH.LINEWIDTHBY
      ENS_PART_TENSOR_GLYPH.LPARTPARENT
      ENS_PART_TENSOR_GLYPH.MATERIALBASETYPE
      ENS_PART_TENSOR_GLYPH.MATERIALDESCRIPTION
      ENS_PART_TENSOR_GLYPH.MESHTYPE
      ENS_PART_TENSOR_GLYPH.METADATA
      ENS_PART_TENSOR_GLYPH.MIRRORORIGINAL
      ENS_PART_TENSOR_GLYPH.NODEDETAIL
      ENS_PART_TENSOR_GLYPH.NODERANGESTEPI
      ENS_PART_TENSOR_GLYPH.NODERANGESTEPJ
      ENS_PART_TENSOR_GLYPH.NODERANGESTEPK
      ENS_PART_TENSOR_GLYPH.NODESCALE
      ENS_PART_TENSOR_GLYPH.NODESIZEBY
      ENS_PART_TENSOR_GLYPH.NODETYPE
      ENS_PART_TENSOR_GLYPH.NODEVARIABLE
      ENS_PART_TENSOR_GLYPH.OPAQUENESS
      ENS_PART_TENSOR_GLYPH.PARENT
      ENS_PART_TENSOR_GLYPH.PARTNUMBER
      ENS_PART_TENSOR_GLYPH.PARTNUMELE
      ENS_PART_TENSOR_GLYPH.PARTNUMELECLIENT
      ENS_PART_TENSOR_GLYPH.PARTTYPE
      ENS_PART_TENSOR_GLYPH.PARTTYPEENUM
      ENS_PART_TENSOR_GLYPH.PATHNAME
      ENS_PART_TENSOR_GLYPH.PERIODICSECTIONS
      ENS_PART_TENSOR_GLYPH.PREDEFINEDMATERIAL
      ENS_PART_TENSOR_GLYPH.PROJECT_MASK
      ENS_PART_TENSOR_GLYPH.REDUCEPOLYGONS
      ENS_PART_TENSOR_GLYPH.REDUCEPOLYGONSFACTOR
      ENS_PART_TENSOR_GLYPH.REFFRAME
      ENS_PART_TENSOR_GLYPH.RENDERINGREFLECTIONID
      ENS_PART_TENSOR_GLYPH.REVERSENORMAL
      ENS_PART_TENSOR_GLYPH.SCALEFACTOR
      ENS_PART_TENSOR_GLYPH.SELECTED
      ENS_PART_TENSOR_GLYPH.SHADING
      ENS_PART_TENSOR_GLYPH.SHOWSFT
      ENS_PART_TENSOR_GLYPH.SOURCES
      ENS_PART_TENSOR_GLYPH.SPECIFYSYMMETRYORIGIN
      ENS_PART_TENSOR_GLYPH.SYMMETRYANGLE
      ENS_PART_TENSOR_GLYPH.SYMMETRYAXIS
      ENS_PART_TENSOR_GLYPH.SYMMETRYDELTA
      ENS_PART_TENSOR_GLYPH.SYMMETRYMIRRORX
      ENS_PART_TENSOR_GLYPH.SYMMETRYMIRRORXY
      ENS_PART_TENSOR_GLYPH.SYMMETRYMIRRORXYZ
      ENS_PART_TENSOR_GLYPH.SYMMETRYMIRRORXZ
      ENS_PART_TENSOR_GLYPH.SYMMETRYMIRRORY
      ENS_PART_TENSOR_GLYPH.SYMMETRYMIRRORYZ
      ENS_PART_TENSOR_GLYPH.SYMMETRYMIRRORZ
      ENS_PART_TENSOR_GLYPH.SYMMETRYORIGIN
      ENS_PART_TENSOR_GLYPH.SYMMETRYRINSTANCES
      ENS_PART_TENSOR_GLYPH.SYMMETRYTYPE
      ENS_PART_TENSOR_GLYPH.TENSIONLINEWIDTH
      ENS_PART_TENSOR_GLYPH.TENSIONRGB
      ENS_PART_TENSOR_GLYPH.TEXTURECOORDTYPE
      ENS_PART_TENSOR_GLYPH.TEXTUREINTERPOLATION
      ENS_PART_TENSOR_GLYPH.TEXTUREMODE
      ENS_PART_TENSOR_GLYPH.TEXTUREOBJECT
      ENS_PART_TENSOR_GLYPH.TEXTUREORIGIN
      ENS_PART_TENSOR_GLYPH.TEXTUREORIGINNODEID
      ENS_PART_TENSOR_GLYPH.TEXTUREORIGINUSE
      ENS_PART_TENSOR_GLYPH.TEXTUREREPEATMODE
      ENS_PART_TENSOR_GLYPH.TEXTURESORIGINNODEID
      ENS_PART_TENSOR_GLYPH.TEXTURESVARIABLE
      ENS_PART_TENSOR_GLYPH.TEXTURESVECTOR
      ENS_PART_TENSOR_GLYPH.TEXTURETORIGINNODEID
      ENS_PART_TENSOR_GLYPH.TEXTURETVARIABLE
      ENS_PART_TENSOR_GLYPH.TEXTURETVECTOR
      ENS_PART_TENSOR_GLYPH.TIPSHAPE
      ENS_PART_TENSOR_GLYPH.TIPSIZE
      ENS_PART_TENSOR_GLYPH.UUID
      ENS_PART_TENSOR_GLYPH.VARIABLE
      ENS_PART_TENSOR_GLYPH.VIEWPORTVIS
      ENS_PART_TENSOR_GLYPH.VISIBILITYELT
      ENS_PART_TENSOR_GLYPH.VISIBILITYLINE
      ENS_PART_TENSOR_GLYPH.VISIBILITYNODE
      ENS_PART_TENSOR_GLYPH.VISIBLE
      ENS_PART_TENSOR_GLYPH.VOLUMEQUALITY
      ENS_PART_TENSOR_GLYPH.VOLUMERENDERINGTYPE
      ENS_PART_TENSOR_GLYPH.__OBJID__
      ENS_PART_TENSOR_GLYPH.objid
   
   